--- a/pom.xml
+++ b/pom.xml
@@ -90,5 +90,16 @@
             <artifactId>microprofile-rest-client-api</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+    <groupId>org.eclipse.microprofile.jwt</groupId>
+    <artifactId>microprofile-jwt-auth-api</artifactId>
+    <version>1.1</version>
+    </dependency>
+ <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.2</version>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 </project>
